Fix table overflow

--- a/src/main/content/antora_ui/src/css/doc.css
+++ b/src/main/content/antora_ui/src/css/doc.css
@@ -170,6 +170,8 @@
   border-collapse: collapse;
   font-size: calc(15 / var(--rem-base) * 1rem);
   margin: 2rem 0;
+  display: block;
+  overflow-x: auto;
   /* enable table-layout: fixed if you want the table width to be enforced strictly */
   /* alternative is to wrap table in div and set overflow-x: auto on the wrapper */
   /* table-layout: fixed; */
